update to 1.0.1 to support spark 2.3.0